# pine-explainer

./: .editorconfig  .gitignore  LICENSE  Makefile  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
examples/: PINE_example.ipynb  make_DITTO_model_by_lemon.ipynb  make_py_entitymatching_model_by_lemon.ipynb
src/pine/: __init__.py  dataset.py  entity.py
src/pine/explainer/: __init__.py  lime_explainer.py  pine_explainer.py  token_pair_metrics.py
src/pine/matcher/: __init__.py  magellan_matcher.py  transformer_matcher.py  transformer_matcher_old.py
tests/: test_dataset.py  test_entity.py  test_matcher.py
tests/explainer/: test_lime_explainer.py  test_pine_explainer.py  test_token_pair_metrics.py
